
2010-08-29
Create Interpreter directory
Step01 Expression with constant expression
Step02 Expression with variable expression
Step03 Command with SetCommand
Step04 Token, Lexer
Step05 Parser with ParseExpression

2010-09-02
Minor changes in a class diagram

2010-09-10
Step06 Lexer process String with escape characters
BinaryExpression, BinaryArithmeticExpression
Parser parse binary expressions and parenthesis